--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "grunt-contrib-jshint": "^0.11.2",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-mocha-test": "^0.12.7",
-    "mocha": "^2.2.4"
+    "mocha": "^2.2.4",
+    "supertest": "^1.2.0"
   },
   "dependencies": {
+    "express": "^4.13.4",
+    "superagent": "^1.8.3"
   }
 }
